feat: improve search functionality - make search text to be lowercase and query also lowercase to make search case insentitive - add pagination support - improve searched results by showing 2 lines containing the search keyword - highlight searched keyword in search results

--- a/static/index.html
+++ b/static/index.html
@@ -9,18 +9,20 @@
 </head>
 
 <body>
-    <p>
-        <form id="form">
-            <label for="query">Query</label>
-            <input type="text" id="query" name="query">
-            <button type="submit">Search</button>
-        </form>
-    </p>
-    <p>
-        <table id="table">
-          <tbody id="table-body"></tbody>
-        </table>
-    </p>
+  <div class="container">
+    <form id="form">
+      <label for="query">Query</label>
+      <input type="text" id="query" name="query">
+      <button type="submit">Search</button>
+    </form>
+    <div class="pagination">
+      <span class="prev">Prev</span>
+      <span class="next">Next</span>
+    </div>
+    <table id="table">
+      <tbody id="table-body"></tbody>
+    </table>
+  </div>
   <script src="app.js"></script>
 </body>
 
